--- a/res/values-es-rES/arrays.xml
+++ b/res/values-es-rES/arrays.xml
@@ -18,167 +18,167 @@
     </string-array>
     <string-array name="country_names">
         <item>Andorra</item>
-        <item>United Arab Emirates</item>
-        <item>Afghanistan</item>
-        <item>Antigua and Barbuda</item>
-        <item>Anguilla</item>
+        <item>Emiratos Árabes Unidos</item>
+        <item>Afganistán</item>
+        <item>Antigua y Barbuda</item>
+        <item>Anguila</item>
         <item>Albania</item>
         <item>Armenia</item>
-        <item>Netherlands Antilles</item>
+        <item>Antillas Neerlandesas</item>
         <item>Angola</item>
-        <item>Antarctica</item>
+        <item>Antártida</item>
         <item>Argentina</item>
-        <item>American Samoa</item>
+        <item>Samoa Americana</item>
         <item>Austria</item>
         <item>Australia</item>
         <item>Aruba</item>
-        <item>Aland Islands</item>
-        <item>Azerbaijan</item>
-        <item>Bosnia and Herzegovina</item>
+        <item>Islas de Áland</item>
+        <item>Azerbaiyán</item>
+        <item>Bosnia-Herzegovina</item>
         <item>Barbados</item>
-        <item>Bangladesh</item>
-        <item>Belgium</item>
+        <item>Bangladés</item>
+        <item>Bélgica</item>
         <item>Burkina Faso</item>
         <item>Bulgaria</item>
-        <item>Bahrain</item>
+        <item>Baréin</item>
         <item>Burundi</item>
-        <item>Benin</item>
-        <item>Bermuda</item>
-        <item>Brunei Darussalam</item>
+        <item>Benín</item>
+        <item>Bermudas</item>
+        <item>Brunéi</item>
         <item>Bolivia</item>
-        <item>Brazil</item>
+        <item>Brasil</item>
         <item>Bahamas</item>
-        <item>Bhutan</item>
-        <item>Bouvet Island</item>
-        <item>Botswana</item>
-        <item>Belarus</item>
-        <item>Belize</item>
+        <item>Bután</item>
+        <item>Isla Bouvet</item>
+        <item>Botsaana</item>
+        <item>Bielorrusia</item>
+        <item>Belice</item>
         <item>Canada</item>
-        <item>Cocos (Keeling) Islands</item>
-        <item>Democratic Republic of the Congo</item>
-        <item>Central African Republic</item>
-        <item>Congo</item>
-        <item>Switzerland</item>
-        <item>"Cote D'Ivoire (Ivory Coast)"</item>
-        <item>Cook Islands</item>
+        <item>Islas Cocos</item>
+        <item>República Democrática del Congo</item>
+        <item>República Centroafricana</item>
+        <item>República del Congo</item>
+        <item>Suiza</item>
+        <item>Costa de Marfil</item>
+        <item>Islas Cook</item>
         <item>Chile</item>
-        <item>Cameroon</item>
+        <item>Camerún</item>
         <item>China</item>
         <item>Colombia</item>
         <item>Costa Rica</item>
-        <item>Serbia and Montenegro</item>
+        <item>Serbia y Montenegro</item>
         <item>Cuba</item>
-        <item>Cape Verde</item>
-        <item>Christmas Island</item>
-        <item>Cyprus</item>
-        <item>Czech Republic</item>
-        <item>Germany</item>
-        <item>Djibouti</item>
-        <item>Denmark</item>
+        <item>Cabo Verde</item>
+        <item>Isla de Navidad</item>
+        <item>Chipre</item>
+        <item>República Checa</item>
+        <item>Alemania</item>
+        <item>Yibuti</item>
+        <item>Denamarca</item>
         <item>Dominica</item>
-        <item>Dominican Republic</item>
-        <item>Algeria</item>
+        <item>República Dominicana</item>
+        <item>Argelia</item>
         <item>Ecuador</item>
         <item>Estonia</item>
-        <item>Egypt</item>
-        <item>Western Sahara</item>
+        <item>Egipto</item>
+        <item>Sahara Occidental</item>
         <item>Eritrea</item>
         <item>España</item>
-        <item>Ethiopia</item>
-        <item>Finland</item>
-        <item>Fiji</item>
-        <item>Falkland Islands (Malvinas)</item>
-        <item>Federated States of Micronesia</item>
-        <item>Faroe Islands</item>
-        <item>France</item>
-        <item>France, Metropolitan</item>
-        <item>Gabon</item>
-        <item>Great Britain (UK)</item>
-        <item>Grenada</item>
+        <item>Etiopia</item>
+        <item>Finlandia</item>
+        <item>Fiyi</item>
+        <item>Islas Malvinas</item>
+        <item>Estados Federados de Micronesia</item>
+        <item>Islas Feroe</item>
+        <item>Francia</item>
+        <item>France Metropolitana</item>
+        <item>Gabón</item>
+        <item>Reino Unido</item>
+        <item>Granada</item>
         <item>Georgia</item>
-        <item>French Guiana</item>
+        <item>Guayana Francesa</item>
         <item>Ghana</item>
         <item>Gibraltar</item>
-        <item>Greenland</item>
+        <item>Groenlandia</item>
         <item>Gambia</item>
         <item>Guinea</item>
-        <item>Guadeloupe</item>
-        <item>Equatorial Guinea</item>
-        <item>Greece</item>
-        <item>S. Georgia and S. Sandwich Islands</item>
+        <item>Guadalupe</item>
+        <item>Guinea Ecuatorial</item>
+        <item>Grecia</item>
+        <item>Islas Georgias del Sur y Sandwich del Sur</item>
         <item>Guatemala</item>
         <item>Guam</item>
-        <item>Guinea-Bissau</item>
+        <item>Guinea-Bisáu</item>
         <item>Guyana</item>
         <item>Hong Kong</item>
-        <item>Heard Island and McDonald Islands</item>
+        <item>Islas Heard y McDonald</item>
         <item>Honduras</item>
-        <item>Croatia (Hrvatska)</item>
-        <item>Haiti</item>
-        <item>Hungary</item>
+        <item>Croacia</item>
+        <item>Haití</item>
+        <item>Hungría</item>
         <item>Indonesia</item>
-        <item>Ireland</item>
+        <item>Irlanda</item>
         <item>Israel</item>
         <item>India</item>
-        <item>British Indian Ocean Territory</item>
-        <item>Iraq</item>
-        <item>Iran</item>
-        <item>Iceland</item>
-        <item>Italy</item>
+        <item>Territorio Británico del Océano Índico</item>
+        <item>Irak</item>
+        <item>Irán</item>
+        <item>Islandia</item>
+        <item>Italia</item>
         <item>Jamaica</item>
-        <item>Jordan</item>
-        <item>Japan</item>
-        <item>Kenya</item>
-        <item>Kyrgyzstan</item>
-        <item>Cambodia</item>
+        <item>Jordania</item>
+        <item>Japón</item>
+        <item>Kenia</item>
+        <item>Kirguistán</item>
+        <item>Camboya</item>
         <item>Kiribati</item>
-        <item>Comoros</item>
-        <item>Saint Kitts and Nevis</item>
-        <item>Korea (North)</item>
-        <item>Korea (South)</item>
+        <item>Comoras</item>
+        <item>San Cristóbal y Nieves</item>
+        <item>Corea del Norte</item>
+        <item>Corea del Sur</item>
         <item>Kuwait</item>
-        <item>Cayman Islands</item>
-        <item>Kazakhstan</item>
+        <item>Islas Caimán</item>
+        <item>Kazajistán</item>
         <item>Laos</item>
-        <item>Lebanon</item>
-        <item>Saint Lucia</item>
+        <item>Líbano</item>
+        <item>Santa Lucía</item>
         <item>Liechtenstein</item>
         <item>Sri Lanka</item>
         <item>Liberia</item>
         <item>Lesotho</item>
-        <item>Lithuania</item>
-        <item>Luxembourg</item>
-        <item>Latvia</item>
-        <item>Libya</item>
-        <item>Morocco</item>
+        <item>Lituania</item>
+        <item>Luxemburgo</item>
+        <item>Letonia</item>
+        <item>Libia</item>
+        <item>Marruecos</item>
         <item>Monaco</item>
         <item>Moldova</item>
         <item>Madagascar</item>
-        <item>Marshall Islands</item>
+        <item>Islas Marshall</item>
         <item>Macedonia</item>
-        <item>Mali</item>
+        <item>Malí</item>
         <item>Myanmar</item>
         <item>Mongolia</item>
         <item>Macao</item>
-        <item>Northern Mariana Islands</item>
-        <item>Martinique</item>
+        <item>Islas Marianas del Norte</item>
+        <item>Martinica</item>
         <item>Mauritania</item>
         <item>Montserrat</item>
         <item>Malta</item>
-        <item>Mauritius</item>
-        <item>Maldives</item>
+        <item>Mauricio</item>
+        <item>Maldivas</item>
         <item>Malawi</item>
-        <item>Mexico</item>
-        <item>Malaysia</item>
+        <item>México</item>
+        <item>Malasia</item>
         <item>Mozambique</item>
         <item>Namibia</item>
-        <item>New Caledonia</item>
+        <item>Nueva Caledonia</item>
         <item>Niger</item>
-        <item>Norfolk Island</item>
+        <item>Isla Norfolk</item>
         <item>Nigeria</item>
         <item>Nicaragua</item>
-        <item>Netherlands</item>
-        <item>Norway</item>
+        <item>Holanda</item>
+        <item>noruega</item>
         <item>Nepal</item>
         <item>Nauru</item>
         <item>Niue</item>
@@ -264,7 +264,7 @@
         <item>Zaire (former)</item>
         <item>Zimbabwe</item>
         <item>Saint Pierre and Miquelon</item>
-  </string-array>
+    </string-array>
     <string-array name="notif_temp_color_entries">
         <item>Negro</item>
         <item>Blanco</item>
@@ -287,7 +287,7 @@
         <item>Humedad</item>
         <item>Presión</item>
         <item>Visibilidad</item>
-        <item >Sunrise and sunset</item>
+        <item >Salida y puesta del sol</item>
         <item>Siguiente aviso</item>
     </string-array>
     <string-array name="widget41_show_entries">
@@ -301,6 +301,7 @@
     </string-array>
     <string-array name="animation_type_entries">
         <item>Por defecto</item>
+        <!--item >MITU</item-->
         <item>Estilo MIUI</item>
     </string-array>
 </resources>
