--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -275,252 +275,252 @@
     </string-array>
     <string-array name="country_names">
         <item>Andorra</item>
-        <item>United Arab Emirates</item>
+        <item>Vereinigte Arabische Emirate</item>
         <item>Afghanistan</item>
-        <item>Antigua and Barbuda</item>
+        <item>Antigua und Barbuda</item>
         <item>Anguilla</item>
-        <item>Albania</item>
-        <item>Armenia</item>
-        <item>Netherlands Antilles</item>
+        <item>Albanien</item>
+        <item>Armenien</item>
+        <item>Niederländische Antillen</item>
         <item>Angola</item>
-        <item>Antarctica</item>
-        <item>Argentina</item>
-        <item>American Samoa</item>
-        <item>Austria</item>
-        <item>Australia</item>
+        <item>Antarktika</item>
+        <item>Argentinien</item>
+        <item>Amerikanisch-Samoa</item>
+        <item>Österreich</item>
+        <item>Australien</item>
         <item>Aruba</item>
-        <item>Aland Islands</item>
-        <item>Azerbaijan</item>
-        <item>Bosnia and Herzegovina</item>
+        <item>Åland</item>
+        <item>Aserbaidschan</item>
+        <item>Bosnien und Herzegovina</item>
         <item>Barbados</item>
-        <item>Bangladesh</item>
-        <item>Belgium</item>
+        <item>Bangladesch</item>
+        <item>Belgien</item>
         <item>Burkina Faso</item>
-        <item>Bulgaria</item>
+        <item>Bulgarien</item>
         <item>Bahrain</item>
         <item>Burundi</item>
         <item>Benin</item>
         <item>Bermuda</item>
-        <item>Brunei Darussalam</item>
-        <item>Bolivia</item>
-        <item>Brazil</item>
+        <item>Brunei</item>
+        <item>Bolivien</item>
+        <item>Brazilien</item>
         <item>Bahamas</item>
         <item>Bhutan</item>
-        <item>Bouvet Island</item>
+        <item>Bouvetinsel</item>
         <item>Botswana</item>
-        <item>Belarus</item>
+        <item>Weißrussland</item>
         <item>Belize</item>
         <item>Canada</item>
-        <item>Cocos (Keeling) Islands</item>
-        <item>Democratic Republic of the Congo</item>
-        <item>Central African Republic</item>
-        <item>Congo</item>
-        <item>Switzerland</item>
-        <item>"Cote D'Ivoire (Ivory Coast)"</item>
-        <item>Cook Islands</item>
+        <item>Kokosinseln</item>
+        <item>Demokratische Republik Kongo</item>
+        <item>Zentralafrikanische Republik </item>
+        <item>Kongo</item>
+        <item>Schweiz</item>
+        <item>Elfenbeinküste</item>
+        <item>Cookinseln</item>
         <item>Chile</item>
-        <item>Cameroon</item>
+        <item>Kamerun</item>
         <item>China</item>
-        <item>Colombia</item>
+        <item>Kolumbien</item>
         <item>Costa Rica</item>
-        <item>Serbia and Montenegro</item>
-        <item>Cuba</item>
-        <item>Cape Verde</item>
-        <item>Christmas Island</item>
-        <item>Cyprus</item>
-        <item>Czech Republic</item>
-        <item>Germany</item>
-        <item>Djibouti</item>
-        <item>Denmark</item>
+        <item>Serbien und Montenegro</item>
+        <item>Kuba</item>
+        <item>Kap Verde</item>
+        <item>Weihnachtsinsel</item>
+        <item>Zypern</item>
+        <item>Tschechische Republik</item>
+        <item>Deutschland</item>
+        <item>Dschibuti</item>
+        <item>Dänemark</item>
         <item>Dominica</item>
-        <item>Dominican Republic</item>
-        <item>Algeria</item>
+        <item>Dominikanische Republik</item>
+        <item>Algerien</item>
         <item>Ecuador</item>
-        <item>Estonia</item>
-        <item>Egypt</item>
-        <item>Western Sahara</item>
+        <item>Estland</item>
+        <item>Ägypten</item>
+        <item>Westsahara</item>
         <item>Eritrea</item>
-        <item>Spain</item>
-        <item>Ethiopia</item>
-        <item>Finland</item>
-        <item>Fiji</item>
-        <item>Falkland Islands (Malvinas)</item>
-        <item>Federated States of Micronesia</item>
-        <item>Faroe Islands</item>
-        <item>France</item>
-        <item>France, Metropolitan</item>
-        <item>Gabon</item>
-        <item>Great Britain (UK)</item>
+        <item>Spanien</item>
+        <item>Äthiopien</item>
+        <item>Finnland</item>
+        <item>Fidschi</item>
+        <item>Falklandinseln (Malvinen)</item>
+        <item>Föderierte Staaten von Mikronesien</item>
+        <item>Färöer</item>
+        <item>Frankreich</item>
+        <item>Metropolitan-Frankreich</item>
+        <item>Gabun</item>
+        <item>Großbritannien (UK)</item>
         <item>Grenada</item>
-        <item>Georgia</item>
-        <item>French Guiana</item>
+        <item>Georgien</item>
+        <item>Französisch-Guayana</item>
         <item>Ghana</item>
         <item>Gibraltar</item>
-        <item>Greenland</item>
+        <item>Grönland</item>
         <item>Gambia</item>
         <item>Guinea</item>
         <item>Guadeloupe</item>
-        <item>Equatorial Guinea</item>
-        <item>Greece</item>
-        <item>S. Georgia and S. Sandwich Islands</item>
+        <item>Äquatorialguinea</item>
+        <item>Griechenland</item>
+        <item>Südgeorgien und die Südl. Sandwichinseln</item>
         <item>Guatemala</item>
         <item>Guam</item>
         <item>Guinea-Bissau</item>
         <item>Guyana</item>
         <item>Hong Kong</item>
-        <item>Heard Island and McDonald Islands</item>
+        <item>Heard und McDonaldinseln</item>
         <item>Honduras</item>
-        <item>Croatia (Hrvatska)</item>
+        <item>Kroatien</item>
         <item>Haiti</item>
-        <item>Hungary</item>
-        <item>Indonesia</item>
-        <item>Ireland</item>
+        <item>Ungarn</item>
+        <item>Indonesien</item>
+        <item>Irland</item>
         <item>Israel</item>
-        <item>India</item>
-        <item>British Indian Ocean Territory</item>
-        <item>Iraq</item>
+        <item>Indien</item>
+        <item>Britisches Territorium im Indischen Ozean</item>
+        <item>Irak</item>
         <item>Iran</item>
-        <item>Iceland</item>
-        <item>Italy</item>
-        <item>Jamaica</item>
-        <item>Jordan</item>
+        <item>Island</item>
+        <item>Italien</item>
+        <item>Jamaika</item>
+        <item>Jordanien</item>
         <item>Japan</item>
-        <item>Kenya</item>
-        <item>Kyrgyzstan</item>
-        <item>Cambodia</item>
+        <item>Kenia</item>
+        <item>Kirgisistan</item>
+        <item>Kambodscha</item>
         <item>Kiribati</item>
-        <item>Comoros</item>
-        <item>Saint Kitts and Nevis</item>
-        <item>Korea (North)</item>
-        <item>Korea (South)</item>
+        <item>Komoren</item>
+        <item>Saint Kitts und Nevis</item>
+        <item>Nordkorea</item>
+        <item>Südkorea</item>
         <item>Kuwait</item>
         <item>Cayman Islands</item>
-        <item>Kazakhstan</item>
+        <item>Kasachstan</item>
         <item>Laos</item>
-        <item>Lebanon</item>
+        <item>Libanon</item>
         <item>Saint Lucia</item>
         <item>Liechtenstein</item>
         <item>Sri Lanka</item>
         <item>Liberia</item>
         <item>Lesotho</item>
-        <item>Lithuania</item>
-        <item>Luxembourg</item>
-        <item>Latvia</item>
-        <item>Libya</item>
-        <item>Morocco</item>
+        <item>Litauen</item>
+        <item>Luxemburg</item>
+        <item>Lettland</item>
+        <item>Libyen</item>
+        <item>Marokko</item>
         <item>Monaco</item>
-        <item>Moldova</item>
-        <item>Madagascar</item>
-        <item>Marshall Islands</item>
-        <item>Macedonia</item>
+        <item>Moldavien</item>
+        <item>Madagaskar</item>
+        <item>Marshallinseln</item>
+        <item>Mazedonien</item>
         <item>Mali</item>
         <item>Myanmar</item>
-        <item>Mongolia</item>
+        <item>Mongolei</item>
         <item>Macao</item>
-        <item>Northern Mariana Islands</item>
+        <item>Nördliche Marianen</item>
         <item>Martinique</item>
-        <item>Mauritania</item>
+        <item>Mauretanien</item>
         <item>Montserrat</item>
         <item>Malta</item>
         <item>Mauritius</item>
-        <item>Maldives</item>
+        <item>Malediven</item>
         <item>Malawi</item>
-        <item>Mexico</item>
+        <item>Mexiko</item>
         <item>Malaysia</item>
-        <item>Mozambique</item>
+        <item>Mosambik</item>
         <item>Namibia</item>
-        <item>New Caledonia</item>
+        <item>Neukaledonien</item>
         <item>Niger</item>
-        <item>Norfolk Island</item>
+        <item>Norfolkinsel</item>
         <item>Nigeria</item>
         <item>Nicaragua</item>
-        <item>Netherlands</item>
-        <item>Norway</item>
+        <item>Niederlande</item>
+        <item>Norwegen</item>
         <item>Nepal</item>
         <item>Nauru</item>
         <item>Niue</item>
-        <item>New Zealand (Aotearoa)</item>
+        <item>Neuseeland (Aotearoa)</item>
         <item>Oman</item>
         <item>Panama</item>
         <item>Peru</item>
-        <item>French Polynesia</item>
-        <item>Papua New Guinea</item>
-        <item>Philippines</item>
+        <item>Französisch-Polynesien</item>
+        <item>Papua-Neuguinea</item>
+        <item>Philippinen</item>
         <item>Pakistan</item>
-        <item>Poland</item>
-        <item>Saint Pierre and Miquelon</item>
+        <item>Polen</item>
+        <item>Saint-Pierre und Miquelon</item>
         <item>Pitcairn</item>
         <item>Puerto Rico</item>
-        <item>Palestinian Territory</item>
+        <item>Palästinensische Autonomiegebiete</item>
         <item>Portugal</item>
         <item>Palau</item>
         <item>Paraguay</item>
-        <item>Qatar</item>
-        <item>Reunion</item>
-        <item>Romania</item>
-        <item>Russian Federation</item>
-        <item>Rwanda</item>
-        <item>Saudi Arabia</item>
-        <item>Solomon Islands</item>
-        <item>Seychelles</item>
+        <item>Katar</item>
+        <item>Réunion</item>
+        <item>Rumänien</item>
+        <item>Russland</item>
+        <item>Ruanda</item>
+        <item>Saudi-Arabien</item>
+        <item>Salomonen</item>
+        <item>Seychellen</item>
         <item>Sudan</item>
-        <item>Sweden</item>
-        <item>Singapore</item>
-        <item>Saint Helena</item>
-        <item>Slovenia</item>
-        <item>Svalbard and Jan Mayen</item>
-        <item>Slovakia</item>
+        <item>Schweden</item>
+        <item>Singapur</item>
+        <item>St. Helena, Ascension und Tristan da Cunha</item>
+        <item>Slovenien</item>
+        <item>Spitzbergen und Jan Mayen</item>
+        <item>Slowakei</item>
         <item>Sierra Leone</item>
         <item>San Marino</item>
         <item>Senegal</item>
         <item>Somalia</item>
         <item>Suriname</item>
-        <item>Sao Tome and Principe</item>
-        <item>USSR (former)</item>
+        <item>São Tomé und Príncipe</item>
+        <item>Sowjetunion (frühere)</item>
         <item>El Salvador</item>
-        <item>Syria</item>
-        <item>Swaziland</item>
-        <item>Turks and Caicos Islands</item>
-        <item>Chad</item>
-        <item>French Southern Territories</item>
+        <item>Syrien</item>
+        <item>Swasiland</item>
+        <item>Turks- und Caicosinseln</item>
+        <item>Tschad</item>
+        <item>Französische Gebiete im südl. Indischen Ozean </item>
         <item>Togo</item>
         <item>Thailand</item>
         <item>Tajikistan</item>
         <item>Tokelau</item>
         <item>Timor-Leste</item>
         <item>Turkmenistan</item>
-        <item>Tunisia</item>
+        <item>Tunesien</item>
         <item>Tonga</item>
-        <item>East Timor</item>
-        <item>Turkey</item>
-        <item>Trinidad and Tobago</item>
+        <item>Osttimor</item>
+        <item>Türkei</item>
+        <item>Trinidad und Tobago</item>
         <item>Tuvalu</item>
         <item>Taiwan</item>
-        <item>Tanzania</item>
+        <item>Tansania</item>
         <item>Ukraine</item>
         <item>Uganda</item>
-        <item>United Kingdom</item>
-        <item>United States Minor Outlying Islands</item>
-        <item>United States</item>
+        <item>Vereinigtes Königreich</item>
+        <item>Kleinere Inselbesitzungen der USA</item>
+        <item>Vereinigte Staaten von Amerika</item>
         <item>Uruguay</item>
-        <item>Uzbekistan</item>
-        <item>Vatican City State (Holy See)</item>
-        <item>Saint Vincent and the Grenadines</item>
+        <item>Usbekistan</item>
+        <item>Staat der Vatikanstadt (Heiliger Stuhl)</item>
+        <item>St. Vincent und die Grenadinen</item>
         <item>Venezuela</item>
-        <item>Virgin Islands (British)</item>
-        <item>Virgin Islands (U.S.)</item>
-        <item>Viet Nam</item>
+        <item>Jungferninseln (Britisch)</item>
+        <item>Jungferninseln (Amerikanisch)</item>
+        <item>Vietnam</item>
         <item>Vanuatu</item>
-        <item>Wallis and Futuna</item>
+        <item>Wallis und Futuna</item>
         <item>Samoa</item>
-        <item>Yemen</item>
+        <item>Jemen</item>
         <item>Mayotte</item>
-        <item>Yugoslavia (former)</item>
-        <item>South Africa</item>
-        <item>Zambia</item>
-        <item>Zaire (former)</item>
-        <item>Zimbabwe</item>
-		<item>Saint Pierre and Miquelon</item>
+        <item>Jugoslawien (früheres)</item>
+        <item>Südafrika</item>
+        <item>Sambia</item>
+        <item>Zaire (früheres)</item>
+        <item>Simbabwe</item>
+		<item>Saint-Pierre und Miquelon</item>
     </string-array>
     <string-array name="notif_temp_color_entries">
         <item >Schwarz</item>
