--- a/res/values-el/arrays.xml
+++ b/res/values-el/arrays.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+ <?xml version="1.0" encoding="utf-8"?>
+ <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string-array name="donations_google_android_market_promt_array">
   		<item>1 Euro</item> 
   		<item>2 Euros</item> 
@@ -9,12 +9,12 @@
   		<item>13 Euros</item> 
   	</string-array>    
     <string-array name="update_interval_names">
-        <item>30 minutes</item> 
-        <item>1 hour</item>
-        <item>2 hours</item>
-        <item>3 hours</item>
-        <item>4 hours</item>
-        <item>6 hours</item>
+        <item>30 λεπτά</item> 
+        <item>1 ώρα</item>
+        <item>2 ώρες</item>
+        <item>3 ώρες</item>
+        <item>4 ώρες</item>
+        <item>6 ώρες</item>
     </string-array>
     <string-array name="update_interval_values" translatable="false">
         <item>30</item> 
@@ -523,28 +523,28 @@
 		<item>Saint Pierre and Miquelon</item>
     </string-array>
     <string-array name="notif_temp_color_entries">
-        <item>Black</item>
-        <item>White</item>
+        <item>Μαύρο</item>
+        <item>Λευκό</item>
     </string-array>
     <string-array name="notif_temp_color_values" translatable="false">
         <item>0</item>
         <item>1</item>
     </string-array> 
     <string-array name="notif_type_entries">
-        <item>Temperature</item>
-        <item>Weather icon</item>
+        <item>Θερμοκρασία</item>
+        <item>Εικονλιδιο καιρού</item>
     </string-array>
     <string-array name="notif_type_values" translatable="false">
         <item>temperature_symbol</item>
         <item>weather_symbol</item>
     </string-array>     
     <string-array name="widget42_show_entries">
-        <item>Clock</item>
-        <item>Date</item>
-        <item>City</item>
-        <item>Weather description</item>
-        <item>Feelings</item>
-        <item>Wind</item>
+        <item>Ρολόι</item>
+        <item>Ημερομηνία</item>
+        <item>Πόλη</item>
+        <item>Περιγραφή καιρού</item>
+        <item>Αίσθηση</item>
+        <item>Άνεμος</item>
     </string-array>
     <string-array name="widget42_show_values" translatable="false">
         <item>w42_clock</item>
@@ -555,13 +555,13 @@
         <item>w42_wind</item>
     </string-array>    
     <string-array name="main_show_entries">
-        <item>Feelings</item>
-        <item>Wind</item>
-        <item>Humidity</item>
-        <item>Pressure</item>
-        <item>Visibility</item>
-        <item>Sunrise and sunset</item>
-        <item>Next Alarm</item>
+        <item>Αίσθηση</item>
+        <item>Άνεμος</item>
+        <item>Υγρασία</item>
+        <item>Πίεση</item>
+        <item>Ορατότητα</item>
+        <item>Ανατολη Δύση</item>
+        <item>Επόμενη αφύπνιση</item>
     </string-array>
     <string-array name="main_show_values" translatable="false">
         <item>main_feel</item>
@@ -573,9 +573,9 @@
         <item>main_next_alarm</item>
     </string-array>        
 	<string-array name="widget41_show_entries">
-        <item>Temperature panel</item>
-        <item>Extended data panel</item>
-        <item>Time panel</item>
+        <item>Πίνακας Θερμοκρασίας</item>
+        <item>Πίνακας δεδομένων</item>
+        <item>Πίνακας χρόνου</item>
 	</string-array>
 	<string-array name="widget41_show_values" translatable="false">
         <item>w41_temp</item>
@@ -583,8 +583,8 @@
         <item>w41_time</item>
 	</string-array>     
     <string-array name="widget41_data_entries">
-        <item>"3-day's forecast data"</item>
-        <item>"Today's Forecast data"</item>
+        <item>"3-μερη πρόβλεψη καιρού"</item>
+        <item>"Σημερινή Πρόβλεψη"</item>
     </string-array>
     <string-array name="widget41_data_values" translatable="false">
         <item>w41_3day_forecast</item>
@@ -652,4 +652,4 @@
         <item>foreca</item>
         <item>wunderground</item>
     </string-array>           
-</resources>
+ </resources>
